--- a/css/css.css
+++ b/css/css.css
@@ -36,6 +36,11 @@ body{
 }
 
 /*itens*/
+.badge-grupo{
+    background-color: #a970ff;
+    color: white;
+}
+
 .linha{
     max-width: 50px;
     margin: 0px;
@@ -298,4 +303,29 @@ label{
 }
 .link-voltar:hover{
     color: #a970ff;
+}
+
+/*paginação*/
+.page-item .page-link{
+    background-color: #a970ff;
+    border: none;
+    color: #f5f5f5;
+}
+
+.circle{
+    background-color: #a970ff;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    
+    
+}
+
+.page{
+    color: #f5f5f5;
+}
+.page:hover{
+    color: #f8f8f8;
 }
