--- a/css/css.css
+++ b/css/css.css
@@ -128,11 +128,14 @@ footer{
     display: flex;
     flex-wrap: wrap;
     
+    
+    
 }
 
 .flex-item{
     margin: 10px;
     flex: 1 1 200px;
+    justify-content: left;
 }
 
 .title-video{
@@ -142,9 +145,10 @@ footer{
 
 /*capas*/
 .capas{
+    max-width: 100%;
     width: 100%;
     height: 290px;
-    object-fit: cover;
+    object-fit: contain;
 
 }
 
@@ -164,6 +168,26 @@ footer{
 	-moz-transform: scale(1.1);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
+}
+
+/*zoom recentes*/
+.zoom-recentes {
+	overflow: hidden;
+}
+
+.zoom-recentes img {
+	max-width: 100%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+    opacity: 0.7;
+}
+
+.zoom-recentes:hover img {
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.);
+    opacity: 1.0;
 }
 
 /*flex video*/
